
2013-02-26  Jaeun Choi

        * Add omit feature to elm_index.

2013-02-28  Jaehwan Kim

        * Add the option about sending signals in content_pos_set.
        When the scroller is resized, the signals("elm,action,scroll", "elm,edge,top" so on) shouldn't be sent,
        because it's not a scroll-action. So in this case, the content_pos_set should be called without the signals.

2013-02-28  ChunEon Park (Hermet)

        * Add elm_transit_smooth_set(), elm_transit_smooth_get()

2013-02-28  Jaehwan Kim

        * Fix the standard of scrollbar-calculation from the scroller's x to pan's x.
        The scrollbar have to sync with pan. if not, the scrollbar doesn't move even if the position of content moves.

2013-03-02  Brian J. Lovin

        * Fix initial value of the spinner on the first mouse move.

2013-03-04  Jaeun Choi

        * Fix elm_index to send a signal to the selected item in smart theme.

2013-03-04  WooHyun Jung

        * Focus highlight should not be showed on (0, 0).

2013-03-04  Junki Cho

        * Improved gengrid item append performance.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't set size hint when keypad on.

2013-03-05  Jaehwan Kim

        * Add edje_object_message_signal_process before edje_object_size_min_restricted_calc.
        If the min size is changed by edje signal in edc, the the function should be called before the calculation.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't change indicator mode when create.

2013-03-06  ChunEon Park (Hermet)

        * Add elm_object_item_signal_callback_add(), elm_object_item_signal_callback_del().

2013-03-07  Jaehwan Kim

        * Add the config ELM_THUMBSCROLL_HOLD_THRESHOLD.
        This is the number of pixels the range which can be scrolled, while the scroller is holed.

2013-03-07  ChunEon Park (Hermet)

        * Add elm_naviframe_item_pop_cb_set().
        * Naviframe works for H/W backkey event.